test/FAIL/dispcmd/autres/03_test_disp.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="no file loaded and to few arguments"
#-------

disp mem
